--- a/www/trunk/signup.html
+++ b/www/trunk/signup.html
@@ -4,7 +4,7 @@
 <link rel="stylesheet" href="signup.css" title="signup">
 </head>
 <body>
-  <a href="index.php">home</a>
+  <a class="corner" href="index.php">home</a>
   <h1>Sign up</h1>
   <form action="dosignup.php" method="post">
     <fieldset>
@@ -25,15 +25,18 @@
       <option value="verizon">Verizon</option>
     </select></p>
     <p><label for="reception">Default Methods of Reception</label>
-      <input type="checkbox" name="recieve_email" value="yes" />Email<br />
+      <div class="multifield"><input type="checkbox" name="recieve_email" value="yes" />Email<br />
       <input type="checkbox" name="recieve_sms_text" value="yes" />SMS (Text)<br />
-      <input type="checkbox" name="recieve_sms_link" value="yes" />SMS (Link)<br /></p>
+      <input type="checkbox" name="recieve_sms_link" value="yes" />SMS (Link)<br /></div></p>
     <p><label for="feeds">Feeds</label> <br />
-      <input type="text" name="feed1" /><br />
-      <input type="text" name="feed2" /><br />
-      <input type="text" name="feed3" /><br />
-      <a href="#">Add More Feeds</a></p>
-    <input type="submit" name="submit" value="Sign Up" />
+      <div class="multifield">
+	<input type="text" name="feed1" /><br />
+	<input type="text" name="feed2" /><br />
+	<input type="text" name="feed3" /><br />
+	<a href="#">Add More Feeds</a>
+      </div>
+    </p>
+    <input class="rightcolumn" type="submit" name="submit" value="Sign Up" />
     </fieldset>
   </form>
 </body>
